# live-room-real-time-recognition

./: LICENSE  README.md
src/: .env.example  Dockerfile  Makefile  (+1 more)
src/speech_engine/: CMakeLists.txt  makefile  readme.md  run.sh
src/speech_engine/asr/include/boost/beast/core/: flat_stream.hpp
src/speech_engine/asr/include/boost/beast/zlib/detail/: inflate_stream.hpp
src/speech_engine/asr/include/boost/compute/detail/: is_contiguous_iterator.hpp
src/speech_engine/asr/include/boost/contract/core/: access.hpp
src/speech_engine/asr/include/boost/date_time/: compiler_config.hpp  date_generator_formatter.hpp  tz_db_base.hpp
src/speech_engine/asr/include/boost/dll/: alias.hpp
src/speech_engine/asr/include/boost/geometry/io/dsv/: write.hpp
src/speech_engine/asr/include/boost/geometry/strategies/cartesian/: buffer_side_straight.hpp
src/speech_engine/asr/include/boost/graph/: labeled_graph.hpp  properties.hpp
src/speech_engine/asr/include/boost/hana/fwd/: eval_if.hpp
src/speech_engine/asr/include/boost/hana/fwd/concept/: euclidean_ring.hpp  functor.hpp  group.hpp  monoid.hpp
src/speech_engine/asr/include/boost/lambda/: closures.hpp
src/speech_engine/asr/include/boost/math/special_functions/: hypergeometric_1F1.hpp  round.hpp  trunc.hpp
src/speech_engine/asr/include/boost/math/special_functions/detail/: ibeta_inverse.hpp
src/speech_engine/asr/include/boost/math/tools/: precision.hpp
src/speech_engine/asr/include/boost/numeric/odeint/: config.hpp
src/speech_engine/asr/include/boost/numeric/odeint/stepper/: explicit_error_generic_rk.hpp  explicit_generic_rk.hpp
src/speech_engine/asr/include/boost/numeric/ublas/: assignment.hpp
src/speech_engine/asr/include/boost/phoenix/function/: lazy_operator.hpp
src/speech_engine/asr/include/boost/python/converter/: object_manager.hpp
src/speech_engine/asr/include/boost/python/detail/: defaults_def.hpp
src/speech_engine/asr/include/boost/random/: hyperexponential_distribution.hpp
src/speech_engine/asr/include/boost/statechart/detail/: memory.hpp
src/speech_engine/asr/include/pthread_win/: pthread.h
src/speech_engine/base-image/: Dockerfile
src/speech_engine/business/: README.txt  main.cpp
src/speech_engine/business/usages/: TencentSDKWapperRecord.cpp  TencentSDKWapperRecord.h  httplib.h
src/speech_engine/include/: TRTCCloud.h
src/speech_engine/lib/: libssl.so.1.1.1g
(+8 files in other folders)
